--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Birthday Mom!</title>
+  <title>Happy Birthday MAMAMAMMMAMAMAAA!</title>
   <style>
     body {
       margin: 0;
@@ -57,18 +57,19 @@
 </head>
 <body>
   <div class="card" id="app">
-    <h1>Happy Birthday Mom! 🎉</h1>
-    <p id="intro">You deserve all the love and happiness today and always.</p>
+    <h1>Happy Birthday MAMA! 🎉</h1>
+    <p id="intro">I think you are the best ever mom. You are so super duper nice and I think that you do a lot for me, and I really appreciate it. 
+    I think you are a really nice person who deserves a millions hugs. Sorry I annoy you a lot though, I'll try to be better to make you happy!</p>
     <div id="quiz" style="display:none">
       <h2 id="question"></h2>
       <input type="text" id="answerInput" placeholder="" />
       <button onclick="nextStep()">Next</button>
     </div>
     <div id="results" style="display:none">
-      <h2>Thank you for sharing! 💖</h2>
+      <h2>Thank you for doing my super duper cool quiz! 💖</h2>
       <p>Here’s what you said:</p>
       <ul id="answerList"></ul>
-      <p style="margin-top: 20px; color: #d63384; font-weight: 500;">Wishing you the most amazing year ahead. You’re the best, Mom! ❤️</p>
+      <p style="margin-top: 20px; color: #d63384; font-weight: 500;">I hope you have an amazing rest of the year-Aarav your favorite son! ❤️</p>
     </div>
     <button id="startBtn" onclick="startQuiz()">Start</button>
   </div>
@@ -76,18 +77,18 @@
   <script>
     const questions = [
       {
-        question: "How was your morning, Mom?",
-        placeholder: "Tell me about your morning...",
+        question: "Did you enjoy the day today?",
+        placeholder: "Tell me 3 of your favorite things from today.",
         key: "morning"
       },
       {
-        question: "What was the most beautiful thing you saw today?",
-        placeholder: "Describe something lovely...",
+        question: "What was the most fun thing you did today?",
+        placeholder: "(Did you like eating at BBQ Nation? I thing I made my moneys worth but idk about you.",
         key: "beautifulThing"
       },
       {
-        question: "What made you smile today?",
-        placeholder: "Something that brought you joy...",
+        question: "Do you have a super skibidi awesome year ahead of you??",
+        placeholder: "(yes or yes)",
         key: "smile"
       }
     ];
